--- a/testSampleData.html
+++ b/testSampleData.html
@@ -15,68 +15,69 @@
       // let backendUrl = "https://6ef5-45-124-144-227.ngrok-free.app/api/resume";
       let backendUrl = "http://127.0.0.1:5000/api/resume";
       
-        let data23 = {
-            name: "ass",
-            email: "dhamejanishivam@gmail.com",
-            phone: "+91 9644971120",
-            location: "Raipur",
-            objective:
-              "I want to be billionaire " +
-              "Seeking opportunities to apply my expertise in building innovative solutions while continuously " +
-              "learning and contributing to dynasdasdsadsdasdasdasdamic projects.",
-            work_experience: [
-              {
-                title: "God • Internship",
-                company: "Thought Applied Creation, Raipur",
-                duration: "Jul 2024 - Aug 2024",
-                description:
-                  "Built a ABasaaaaaaaaaaaaaaaaaaaaaaC website linked to a database using React, HTML, CSS, JavaScript, PHP, " +
-                  "and MySQL.",
-              },
-            ],
-            education: [
-              {
-                degree: "B1111111.Tech, Compu11ter Science & Engineering",
-                year: "2022 - 20261111",
-                institution:
-                  "Shri Shankaracharya Institute Of Professional Management And Technoaaaaaaaaaaaaaaaaaaaalogy",
-              },
-              {
-                degree: "Senior Secondary (XII), CBSE",
-                year: "2022",
-                institution: "Krishna Public School",
-              },
-              {
-                degree: "Secondasdasdasary (X), CBSE",
-                year: "2020",
-                institution: "Kriasdasdshna Public School",
-              },
-            ],
-            projects: [
-              "https://shivamdhamejani.in",
-              "https://github.com/dhamejanishivam",
-              "https://github.com/dhamejanishivam/Heart-Disease-Predictor",
-              "https://github.com/dhamejanishivam/pendrive-virus",
-            ],
-            skills: [
-              "JavaScript",
-              "Pythonsdadas",
-              "Photography",
-              "HTML&CSS",
-              "C Programming",
-              "C++ Programming",
-              "Linux",
-              "MS-Excel",
-              "Digital Marketing",
-              "SQL",
-              "Data Structures",
-            ],
-            additional_details: [
-              "Green Olympiad",
-              "2nd position in Spell Bee Competition",
-              "1st position in Best Out of Waste competition",
-            ],
-        };
+      let data23 = {
+  name: "xyz",
+  email: "random123@gmail.com",
+  phone: "+91 9876543210",
+  location: "Mumbai",
+  objective:
+    "Aspiring to excel in the tech industry " +
+    "while consistently enhancing my skills and contributing to transformative projects.",
+  work_experience: [
+    {
+      title: "Developer Intern",
+      company: "Innovate Tech Solutions, Bangalore",
+      duration: "May 2023 - Sep 2023",
+      description:
+        "Developed and maintained an e-commerce platform using Node.js, React, and MongoDB.",
+    },
+  ],
+  education: [
+    {
+      degree: "B.Sc, Information Technology",
+      year: "2021 - 2025",
+      institution: "Techno International College of Sciences",
+    },
+    {
+      degree: "Senior Secondary (XII), State Board",
+      year: "2021",
+      institution: "Springfield High School",
+    },
+    {
+      degree: "Secondary (X), State Board",
+      year: "2019",
+      institution: "Bright Future Academy",
+    },
+  ],
+  projects: [
+    {
+      projectName: "Weather App",
+      projectLink: "github.com/weatherapp",
+      projectDesc:
+        "Developed a weather forecasting application using APIs and modern UI frameworks.",
+    },
+  ],
+  skills: [
+    "Java",
+    "Python",
+    "Photo Editing",
+    "React.js",
+    "Ruby",
+    "Docker",
+    "Shell Scripting",
+    "MS Access",
+    "Content Writing",
+    "NoSQL",
+    "Algorithms",
+  ],
+  additional_details: [
+    "Bronze Medal in Mathematics Olympiad",
+    "3rd position in Robotics Competition",
+    "Winner of Creative Writing Contest",
+  ],
+  'selectedTemplateId':'1'
+};
+
 
         
 
