--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h2>Build Your Dream Resume</h2>
                 <p>Create a professional resume effortlessly with our easy-to-use builder <strong>for free</strong> .
                     Impress employers and land your dream job in no time!</p>
-                <button onclick="maker()">Get Started</button>
+                <button onclick="scrollToSection('main2')">Get Started</button>
             </div>
             <div class="rightBody">
                 <img srcset="files/resume.jpg 1x, files/resume@2x.jpg 2x" alt="Sample Resume">
@@ -72,7 +72,7 @@
         </div>
         <span id="moreTemplates">More templates coming soon...</span>
         <div class="submitbtn">
-            <button onclick="nextPage()">Start Making Resume</button>
+            <button onclick="nextPage()" id="btn1">Start Making Resume</button>
         </div>
     </main>
 
@@ -83,7 +83,7 @@
 
 
     <footer>
-        <div class="footer">
+        <div class="footer" id="footer">
             <h3>&#169; Shivam Dhamejani</h3>
             <p>Connect with me:</p>
             <a href="https://github.com/dhamejanishivam" target="_blank">GitHub</a> |
