--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <button onclick="scrollToSection('main2')">Get Started</button>
             </div>
             <div class="rightBody">
-                <img srcset="files/resume.jpg 1x, files/resume@2x.jpg 2x" alt="Sample Resume">
+                <img srcset="files/resume.jpg" alt="Sample Resume">
             </div>
         </section>
     </main>
